--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.chartcollectionloadoptions.yml
@@ -57,7 +57,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#chartType:member'
     summary: |-
-      对于集合中的每一项：代表图表的类型。 有关详细信息，请参阅 ChartType。
+      对于集合中的每一项：指定图表的类型。 有关详细信息，请参阅 ChartType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
@@ -102,7 +102,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#height:member'
     summary: |-
-      对于集合中的每一项：代表图表对象的高度（以磅为单位）。
+      对于集合中的每一项：指定 chart 对象的高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -117,7 +117,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：图表的唯一 id。 只读。
+      对于集合中的每一项：图表的唯一 id。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -162,7 +162,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#name:member'
     summary: |-
-      对于集合中的每一项：代表 chart 对象的名称。
+      对于集合中的每一项：指定 chart 对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -192,7 +192,7 @@ items:
           - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#showAllFieldButtons:member'
     summary: |-
-      对于集合中的每一项：表示是否在数据透视图上显示所有字段按钮。
+      对于集合中的每一项：指定是否在数据透视图上显示所有字段按钮。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
@@ -207,7 +207,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#title:member'
     summary: |-
-      对于集合中的每一项：代表指定图表的标题，包括标题的文本、可见性、位置和格式。
+      对于集合中的每一项：指定指定图表的标题，包括标题的文本、可见性、位置和格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
@@ -222,7 +222,7 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#top:member'
     summary: |-
-      对于集合中的每一项：代表从对象的上边缘到工作表第1行顶部的距离，或图表上的图表区顶部的距离（以磅为单位）。
+      对于集合中的每一项：指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -237,7 +237,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions#width:member'
     summary: |-
-      对于集合中的每一项：代表 chart 对象的宽度（以磅为单位）。
+      对于集合中的每一项：指定 chart 对象的宽度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
