--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetcollectionloadoptions.yml
@@ -52,7 +52,7 @@ items:
           - 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetCollectionLoadOptions#id:member'
     summary: |-
-      对于集合中的每一项：返回一个值，该值唯一地标识给定工作簿中的工作表。 即使工作表被重命名或移动，标识符的值仍然相同。 只读。
+      对于集合中的每一项：返回一个值，该值唯一地标识给定工作簿中的工作表。 即使工作表被重命名或移动，标识符的值仍然相同。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -112,7 +112,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.WorksheetCollectionLoadOptions#standardHeight:member'
     summary: |-
-      对于集合中的每一项：返回工作表中所有行的标准（默认）高度（以磅为单位）。 只读。
+      对于集合中的每一项：返回工作表中所有行的标准（默认）高度（以磅为单位）。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardHeight
@@ -127,7 +127,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetCollectionLoadOptions#standardWidth:member'
     summary: |-
-      对于集合中的每一项：返回或设置工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+      对于集合中的每一项：指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: standardWidth
@@ -142,7 +142,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetCollectionLoadOptions#tabColor:member'
     summary: |-
-      对于集合中的每一项：获取或设置工作表标签颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+      对于集合中的每一项：工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为\#"123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tabColor
