--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.colorscaleconditionalformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.colorscaleconditionalformat.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.ColorScaleConditionalFormat:class'
     summary: |-
-      表示条件格式的 IconSet 条件。
+      表示条件格式设置的色阶条件。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ColorScaleConditionalFormat
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ColorScaleConditionalFormat#context:member'
@@ -159,7 +159,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ColorScaleConditionalFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -207,7 +207,7 @@ items:
           - 'excel!Excel.Interfaces.ColorScaleConditionalFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -219,7 +219,7 @@ references:
     name: Excel.Interfaces.ColorScaleConditionalFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData:interface'
     name: Interfaces.ColorScaleConditionalFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ColorScaleConditionalFormatData:interface'
     name: Excel.Interfaces.ColorScaleConditionalFormatData
