--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.custompropertyloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.custompropertyloadoptions.yml
@@ -30,7 +30,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#key:member'
     summary: |-
-      获取 customProperty 的键。 只读。
+      自定义属性的键。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: key
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#type:member'
     summary: |-
-      获取自定义属性的值类型。 只读。
+      用于自定义属性的值的类型。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -60,7 +60,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.CustomPropertyLoadOptions#value:member'
     summary: |-
-      获取或设置自定义属性的值。
+      自定义属性的值。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
