--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.headerfootergroupupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.headerfootergroupupdatedata.yml
@@ -78,7 +78,7 @@ items:
           - 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.HeaderFooterGroupUpdateData#state:member'
     summary: |-
-      获取或设置所设置的页眉/页脚的状态。 有关详细信息，请参阅 Excel.HeaderFooterState。
+      页眉/页脚的设置状态。 有关详细信息，请参阅 Excel.HeaderFooterState。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: state
